# imboard

./: .editorconfig  .gitignore  .qmllint.ini  AGENTS.md  CHANGELOG.md  CMakeLists.txt  PRIVACY.md  README.md  REUSE.toml  SECURITY.md  SUPPORT.md  TRADEMARKS.md  io.github.anicetuscer.imboard.yml
docs/: architecture.md  code-map.md  flathub-submission.md  flatpak-development.md  handover-wsl-flathub.md  keyboard-layouts.md  public-release-audit.md  release-checklist.md
layouts/: gb.json  us.json
packaging/: io.github.anicetuscer.imboard.desktop  io.github.anicetuscer.imboard.metainfo.xml  io.github.anicetuscer.imboard.yml
qml/: AboutPopup.qml  AlphaBoard.qml  AppearancePopup.qml  CompatibilityWarningPopup.qml  ConfigPopup.qml  CustomPadOnlyPage.qml  DeveloperCustomPage.qml  DeveloperPad.qml  DeveloperStandardPage.qml  KeyCap.qml  KeyboardSurface.qml  LayoutPopup.qml  Main.qml  PermissionSetupPopup.qml  RemoveAccessPopup.qml  StartupPromptPopup.qml
scripts/: build-release-bundle.sh  install-user-flatpak.sh  uninstall-user-flatpak.sh
src/: appearancestore.cpp  appearancestore.h  appmetadata.h  compatibilitystore.cpp  compatibilitystore.h  customkeystore.cpp  customkeystore.h  inputcontroller.cpp  inputcontroller.h  instancecontroller.cpp  instancecontroller.h  keyboardlayoutstore.cpp  keyboardlayoutstore.h  main.cpp  portalinputbackend.cpp  portalinputbackend.h  signalhandler.cpp  signalhandler.h  smoketestcontroller.cpp  smoketestcontroller.h  startupmanager.cpp  startupmanager.h  surfacecontroller.cpp  surfacecontroller.h
tests/: appearancestore_test.cpp  compatibilitystore_test.cpp  customkeystore_test.cpp  inputcontroller_test.cpp  keyboardlayoutstore_test.cpp  lifecycle.sh  portalinputbackend_test.cpp  qml_smoke.sh  startupmanager_test.cpp
